# supernotify

./: .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  CHANGELOG.md  CNAME  README.md  SECURITY.md  TODO.md  beta  conftest.py  hacs.json  index.html  info.md  latest  mkdocs.yml  objects.inv  pyproject.toml  refresh-deps.sh  requirements.txt  requirements_docs.txt  requirements_test.txt  robots.txt  sitemap.xml  tags.json  testing.json  versions.json
.claude/: CLAUDE.md  settings.json
.claude/skills/: supernotify.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: auto_assign_issue.yml  auto_assign_pr.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  docs.yml  hacs-validate.yml  labeller.yml  python-package.yml
1.9.3/: 404.html  index.html
1.9.3/concepts/: index.html
1.9.3/getting_started/: index.html
1.9.3/search/: search_index.json
HASS_config_tips/: index.html
archiving/: index.html
changelog/: index.html
concepts/: index.html
configuration/: index.html
configuration/archiving/: index.html
configuration/conditions/: index.html
configuration/deliveries/: index.html
configuration/email/: index.html
configuration/levels/: index.html
configuration/multimedia/: index.html
configuration/people/: index.html
configuration/yaml/: index.html
custom_components/: CHANGELOG.md
custom_components/supernotify/: __init__.py  archive.py  common.py  config_flow.py  configuration.py  const.py  context.py  delivery.py  delivery_method.py  envelope.py  hass_api.py  manifest.json  media_grab.py  model.py  notification.py  notify.py  people.py  quality_scale.yaml  scenario.py  schema.py  services.yaml  snoozer.py  strings.json  transport.py
deliveries/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml  tags.json
dev/changelog/: index.html
dev/concepts/: index.html
dev/configuration/: index.html
dev/de/: index.html
dev/developer/: index.html
dev/es/: index.html
dev/fr/: index.html
dev/getting_started/: index.html
dev/hi/: index.html
dev/it/: index.html
dev/ja/: index.html
docgen/: render_templates.py  schema_extractor.py  transport_table.py
docs/: CNAME  HASS_config_tips.md  archiving.md  changelog.md  concepts.md  deliveries.md  getting_started.md  index.md  methods.md  multimedia.md  people.md  scenarios.md  snoozing.md  tags.md  transports.md
examples/: maximal.yaml  minimal.yaml  unmigrated.yaml
getting_started/: index.html
junit/: default.html
latest/: 404.html  objects.inv
main/: 404.html  index.html  sitemap.xml
multimedia/: index.html
overrides/: main.html
people/: index.html
recipes/: index.html
scenarios/: index.html
search/: search_index.json
snoozing/: index.html
tags/: index.html
tests/: test_transport_gotify.py
transports/: index.html
usage/: index.html
v1.10.0/: sitemap.xml
v1.11.0/: sitemap.xml
v1.12.0-beta1/: sitemap.xml  tags.json
v1.12.1-d4/: 404.html  index.html  sitemap.xml
v1.14.0/: .coverage-tmp.html  404.html  index.html
v1.15.0-beta1/: 404.html  sitemap.xml
v1.16.1/: sitemap.xml
v1.16.1-beta1/: sitemap.xml
v1.16.2/: 404.html
v1.9.0/: index.html
v1.9.1/: index.html  sitemap.xml
(+1939 files in other folders)
